syntax = "proto3";

package golem.rib;

import "wasm/ast/type.proto";

message RibInputType {
    map<string, wasm.ast.Type> types = 1;
}